# MAI-Client

./: .gitignore  CMakeLists.txt  build.sh  pyproject.toml  readme.md
src/: config.cpp  config.hpp.in  main.cpp
src/builders/: ai_modules_influences.cpp  build_ui.cpp  header.hpp  overview.cpp
src/elements/: base.cpp  base.hpp  button.cpp  button.hpp
src/elements/interactive/: button.cpp  button.hpp  text_in_rect.cpp  text_in_rect.hpp
src/elements/list/: base.cpp  base.hpp  horizontal.cpp  horizontal.hpp  vertical.cpp  vertical.hpp
src/elements/tabs/: system.cpp  system.hpp  tab.cpp  tab.hpp
src/mai/: __main__.py  functions.py  plotter.py  settings.py
src/mai/ai/: controller.py  environment.py  mai_model.py  mcs_controller.py  memory.py  trainer.py  transition.py  utils.py
src/mai/ai/networks/: __init__.py  base.py  reachBall.py  reachBallAir.py  reachBallFloor.py  reachCenterFloor.py  state.py  test.py
src/mai/ai/rewards/: __init__.py  _template.py  ball_shot_speed.py  base.py  car_velocity.py  closing_to_ball.py  constant_distance_to_ball.py  constant_reward_distance_b.py  constant_reward_distance_ball.py  constant_velocity_to_ball.py  proximity_to_ball.py
src/mai/capnp/: __init__.py  broker.py  client.py  data.capnp  data_classes.py  exchanger.py  names.py  names.pyi
src/mai/capnp/stub/: fromRL.py  toRL.py
src/mai/control/: controller.py
src/mai/control/tactics/: bases.py  debug.py  run_module.py  simple.py  watch_graph.py
src/mai/control/tactics/trainings/: __init__.py  base.py  custom_training.py  freeplay.py  mai_custom_training.py  mai_freeplay.py
src/mai/interface/: __init__.py  address_port.py  functions.py  host_port.py  main.py  main_interface.py
src/mai/plotter/: __init__.py  low_level.py  plotter.py
src/mai/socketing/: __init__.py  receiver.py  sender.py
src/mai/windows/: __init__.py  controller.py
tests/ai/: test_environment.py
tests/capnp/: test_basic_conversions.py
