[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/mai"
]

[project]
name="mai"
version="0.1"
authors = [
  {name="Геворкян Артём", email="tima-1324@mail.ru"}
]
description = "Module AI network client"
dependencies = [
  'pycapnp>=2.0.0',
  'pywin32>=308',
  'live-plotter>=4.1.0',
  "torch>=2.6.0",
  "torchrl>=0.7.1",
  "pysimplegui>=5.0.9",
]

classifiers = [
  "Development Status :: 4 - Beta"
  , "Operating System :: POSIX :: Linux"
  , "Operating System :: Microsoft :: Windows"
  , "Programming Language :: Python"
  , "Programming Language :: Python :: 3"
  , "Programming Language :: Python :: 3 :: Only"
  , "Programming Language :: Python :: 3.12"
  , "Natural Language :: English"
]
requires-python = ">= 3.12"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
pysimplegui = { index = "pysimplegui" }

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]


[[tool.uv.index]]
name = "pysimplegui"
url = "https://PySimpleGUI.net/install"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
